turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:23: error: value majenta is not a member of object java.awt.Color
  setColor(Color.majenta);
                 ^